force-app/main/default/objects/Bogo_Customer__c/Bogo_Customer__c.object-meta.xml
<CustomObject>
 <label>Bogo Customer</label>
 <pluralLabel>Bogo Customers</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
 <nameField>
  <label>Bogo Cust ID</label>
  <type>AutoNumber</type>
  <displayFormat>ADV-{00000}</displayFormat>
 </nameField>
</CustomObject>