force-app/main/default/objects/Bogo_Customer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Bogo_Customers</relationshipName>
</CustomField>