force-app/main/default/objects/Bogo_Customer__c/fields/Email_Address__c.field-meta.xml
<CustomField>
 <fullName>Email_Address__c</fullName>
 <label>Email Address</label>
 <type>Email</type>
 <unique>true</unique>
 <externalId>true</externalId>
</CustomField>