force-app/main/default/objects/Bogo_Customer__c/fields/First_Name__c.field-meta.xml
<CustomField>
 <fullName>First_Name__c</fullName>
 <label>First Name</label>
 <type>Text</type>
 <length>80</length>
 <required>true</required>
</CustomField>