force-app/main/default/objects/Bogo_Customer__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
 <fullName>Mobile_Number__c</fullName>
 <label>Mobile Number</label>
 <type>Phone</type>
</CustomField>