force-app/main/default/objects/Bogo_Customer__c/fields/Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Reward_Points__c</fullName>
    <label>Reward Points</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>